# VisualEngine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  VisualEngine.slnx  VisualEngine.vcxproj  VisualEngine.vcxproj.filters  camera.h  default.frag  default.vert  entity.h  imgui.ini  main.cpp  mesh.h  model.h  renderer.h  shader.h  test_model.glb  wrench_editor.cpp  wrench_editor.h  ~AutoRecover.VisualEngine.vcxproj0
source/components/: camera_component.h  component.h  mesh_component.h  script_component.h  transform_component.h
source/core/: camera.h  common.h  entity.h  example_script.as  main.cpp  project_manager.h  scene_manager.h  script_system.h  test_project.vep
source/editor/: wrench_editor.cpp  wrench_editor.h
source/renderer/: mesh.h  model.h  renderer.h  shader.h  stb_impl.cpp
